--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,30 @@
             <version>2.8.6</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.example</groupId>-->
+<!--            <artifactId>Test2</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--            <scope>system</scope>-->
+<!--            <systemPath>${basedir}/src/main/resources/lib/Test2-1.0-SNAPSHOT.jar</systemPath>-->
+<!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>Figure</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/src/main/resources/lib/Figure2-1.0-SNAPSHOT.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>org.example2</groupId>
+            <artifactId>Trapezoid</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/src/main/resources/lib/Trapezoid-1.0-SNAPSHOT.jar</systemPath>
+        </dependency>
+
 
 
     </dependencies>
@@ -50,5 +74,8 @@
                 </configuration>
             </plugin>
         </plugins>
+
+            <defaultGoal>install</defaultGoal>
+
     </build>
 </project>
